force-app/main/default/objects/TCP_Change_Cancel_Request__c/TCP_Change_Cancel_Request__c.object-meta.xml
<CustomObject>
    <description>This object will store the change cancel requests.</description>
    <label>Change/Cancel Request</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Change/Cancel Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change/Cancel Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>