force-app/main/default/objects/TCP_Change_Cancel_Request__c/fields/Customer_PO__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO__c</fullName>
    <label>Customer PO</label>
    <length>80</length>
    <type>Text</type>
</CustomField>