force-app/main/default/objects/TCP_Change_Cancel_Request__c/fields/Customer_PO_New__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_New__c</fullName>
    <label>Customer PO New</label>
    <length>80</length>
    <type>Text</type>
</CustomField>