force-app/main/default/objects/TCP_Change_Cancel_Request__c/fields/Delivery_Terms__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Terms__c</fullName>
    <label>Delivery Terms</label>
    <length>80</length>
    <type>Text</type>
</CustomField>