force-app/main/default/objects/TCP_Change_Cancel_Request__c/fields/Mode_of_Transport__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Transport__c</fullName>
    <label>Mode of Transport</label>
    <length>80</length>
    <type>Text</type>
</CustomField>