force-app/main/default/objects/TCP_Change_Cancel_Request__c/fields/Modify_Cancel_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Modify_Cancel_Remarks__c</fullName>
    <label>Modify/Cancel Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>