force-app/main/default/objects/TCP_Change_Cancel_Request__c/fields/Order_Name_New__c.field-meta.xml
<CustomField>
    <fullName>Order_Name_New__c</fullName>
    <label>Order Name New</label>
    <length>80</length>
    <type>Text</type>
</CustomField>