force-app/main/default/objects/TCP_Change_Cancel_Request__c/fields/Other_Instruction_New__c.field-meta.xml
<CustomField>
    <fullName>Other_Instruction_New__c</fullName>
    <label>Other Instruction New</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>