force-app/main/default/objects/TCP_Change_Cancel_Request__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <label>Sales Order</label>
    <length>10</length>
    <type>Text</type>
</CustomField>