force-app/main/default/objects/TCP_Change_Cancel_Request__c/fields/Web_Order__c.field-meta.xml
<CustomField>
    <fullName>Web_Order__c</fullName>
    <label>Web Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Change/Cancel Requests</relationshipLabel>
    <relationshipName>Change_Cancel_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>